from pydantic import BaseModel
import uuid


class Locacao(BaseModel):
    id: int
