@startuml SmartAuto
skinparam defaultFontName Hasklig
skinparam dpi 150

enum Role {
  VENDEDOR
  GERENTE
  ADMIN
}

class Funcionario {
  -_id: uuid
  -_usuario: str
  -_senha: str
  -_nome: str
  -_telefone: str
  -_role: Role
  __
  +Funcionario(id: uuid, usuario: str, senha: str, nome: str, telefone: str, role: Role)
  +realizar_venda(cliente: Cliente, vendedor: Vendedor, veiculo: Veiculo):bool
  +realizar_locacao(cliente: Cliente, vendedor: Vendedor, veiculo: Veiculo, dt_ini: Date, dt_fim: Date): bool
  +inserir_cliente(cliente: Cliente): bool
  +alterar_informacoes(funcionario: Funcionario): bool
  __
  +inserir_veiculo(veiculo: Veiculo): bool
  +remover_veiculo(veiculo: Veiculo): bool
  +alterar_veiculo(veiculo: Veiculo): bool
  +inserir_vendedor(vendedor: Funcionario): bool
  +remover_vendedor(vendedor: Funcionario):bool
  +alterar_vendedor(vendedor: Funcionario):bool
  +remover_cliente(cliente: Cliente): bool
  +alterar_cliente(cliente: Cliente): bool
  __
  +inserir_gerente(gerente: Funcionario)
  +remover_gerente(gerente: Funcionario): bool
  +alterar_gerente(gerente: Funcionario)
  +remover_venda(venda: Venda): bool
  +alterar_venda(venda: Venda): bool
  +remover_locacao(locacao: Locacao): bool
  +alterar_locacao(locacao: Locacao): bool
  +remover_admin(admin: Funcionario): bool
  +alterar_admin(admin: Funcionario): bool
}
Funcionario --> Role : "é um"
class Cliente {
  -_id: uuid
  -_nome: str
  -_telefone: str
  -_email: str
  -_endereco: Endereco
  
  +Cliente(id: uuid, nome: str, telefone: str, email: str, endereco: Endereco)
}

class Endereco{
  -_id: uuid
  -_uf: str
  -_cidade: str
  -_logradouro: str
  -_numero: str
  +Endereco(id:uuid, uf: str, cidade: str, logradouro:str, numero: str)
}

class Venda {
  -_id:uuid
  -_data: date
  -_valor: float
  -_locador: Cliente
  -_veiculo: Veiculo
  -_cliente: Cliente

  +Venda(data: date, valor: float, cliente: Cliente, vendedor: Funcionario)
}

class Locacao {
  -_id:uuid
  -_data_inicio: date
  -_data_fim: date
  -_valor_diaria: float
  -_locador: Cliente
  -_veiculo: Veiculo
  -_cliente: Cliente

  +Locacao(data: date, valor: float, cliente: Cliente, vendedor: Funcionario)
}

class Veiculo {
  -_id:uuid
  -_marca: str
  -_modelo: str
  -_ano: int
  -_preco: float
  -_valor_diaria: float
  -_disponivel: bool
  -_cor:str
  +Veiculo(id: uuid, marca: str, modelo: str, ano: int, preco: float, valor_diaria, cor: str)
  +get_disponivel(): bool
}

Venda *-- Veiculo : "é vendido"
Venda o-- Cliente : "faz"
Venda o-- Funcionario : "realiza"

Locacao *-- Veiculo : "é locado"
Locacao o-- Cliente : "faz"
Locacao o-- Funcionario : "realiza"

Cliente "1"*-- "1"Endereco : "tem"

@enduml
